--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <!-- INIZIO SEZIONE FORM -->
+                <div class="ticket_form">
+                    <label for="nome_cognome">Nome Cognome</label>
+                    <input type="text" name="nome_cognome" id="nome_cognome">
+                    <label for="km">Km da percorrere</label>
+                    <input type="text" name="km" id="km">
+                    <label for="eta">Fascia d'età</label>
+                    <select name="eta" id="eta">
+                        <option value="">Seleziona una fascia</option>
+                        <option value="">Minorenne</option>
+                        <option value="">Maggiorenne</option>
+                        <option value="">Over 65</option>
+                    </select>
+                    <button type="submit" id="genera">
+                        Genera
+                    </button>
+                    <button type="reset" id="annulla">
+                        Annulla
+                    </button>
+                </div>
+                <!-- FINE SEZIONE FORM -->
+            </div>
+            <div class="col-12">
+                <!-- INZIO SEZIONE TICKET -->
+                <div class="ticket">
+
+                </div>
+                <!-- FINE SEZIONE TICKET -->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
